--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel": "^6.23.0",
+    "babel-loader": "^8.2.2",
     "express": "^4.17.1",
     "loader": "^2.1.1",
+    "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.13.0",
@@ -24,6 +26,8 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
+    "webpack": "webpack -w --mode=development",
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
