--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
     "loader": "^2.1.1",
+    "mongoose": "^5.11.11",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
