--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "yml": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
