--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "webpack": "webpack -w --mode=development",
+    "start": "nodemon server",
+    "test": "jest"
+  },
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
@@ -25,12 +30,8 @@
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
-  },
-  "scripts": {
-    "webpack": "webpack -w --mode=development",
-    "start": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
