--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "yml": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fast-check": "^2.11.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   },
   "author": "",
   "license": "ISC"
