--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webpack": "webpack -w --mode=development",
     "start": "nodemon server",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node db/seedFakeData.js"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -34,6 +35,7 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.1.0",
     "fast-check": "^2.11.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
