unit testing for api

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "axios": "^0.21.1",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "loader": "^2.1.1",
     "mongoose": "^5.11.11",
     "path": "^0.12.7",
