--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
     "yml": "^1.0.0"
