--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "styled-components": "^5.2.1",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
+    "webpack-node-externals": "^2.5.2",
     "yml": "^1.0.0"
   },
   "devDependencies": {
